<resources>
    <string name="app_name">智能洗车机</string>
    <string name="please_input_phone_number">请输入手机号</string>
    <string name="please_input_phone_password">请输入密码</string>
    <string name="please_input_phone_verification_code">请输入验证码</string>
    <string name="ok">确认</string>
    <string name="verification_code">验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="service_clause01">确认表示同意</string>
    <string name="service_clause02">《洗车机服务条款》</string>
    <string name="start_use">开始使用</string>
    <string name="records_of_consumption">消费记录</string>
    <string name="mine_activity">我的活动</string>
    <string name="user_guide">用户指南</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="account_balance">账户余额(元)</string>
    <string name="recharge">充值</string>
    <string name="phone_bind">手机绑定</string>
    <string name="phone_number">手机号</string>
    <string name="finish">完成</string>
    <string name="please_input_recharge_money">请输入所需的充值金额</string>
    <string name="pay_by_alipay">支付宝支付</string>
    <string name="pay_by_wechat">微信支付</string>
    <string name="pay_by_wallet">余额支付</string>
    <string name="use_date">使用日期</string>
    <string name="money">金额</string>
    <string name="use_time">使用时长</string>
    <string name="washCar_id">洗车机ID</string>
    <string name="nick_name">昵称</string>
    <string name="img_header">头像</string>
    <string name="personal_data">个人资料</string>
    <string name="my_campaign">我的活动</string>
    <string name="please_input_you_want_search">请输入你要搜索的内容</string>
    <string name="send_agin">重新发送</string>
    <string name="send_code">获取验证码</string>
    <string name="please_input_phone">请输入您的手机号码</string>
</resources>
