<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/include_common_actionbar" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:background="@color/txt_white">
        <ImageButton
            android:id="@+id/ib01"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="21dp"
            android:layout_marginLeft="61dp"
            android:src="@mipmap/ic_success"
            android:layout_alignParentLeft="true"/>
        <ImageButton
            android:id="@+id/ib02"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="21dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_successing"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="31dp"
            android:background="@color/colorPrimary"
            android:layout_toRightOf="@id/ib01"
            android:layout_toLeftOf="@id/ib02"
            />
        <ImageButton
            android:id="@+id/ib03"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="21dp"
            android:layout_marginRight="61dp"
            android:src="@mipmap/ic_unsuccess"
            android:layout_alignParentRight="true"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="31dp"
            android:background="@color/txt_gray"
            android:layout_toRightOf="@id/ib02"
            android:layout_toLeftOf="@id/ib03"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/txt_gray"
            android:layout_below="@id/ib01"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:text="@string/phone_bind"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/txt_gray"
            android:layout_below="@id/ib02"
            android:layout_marginLeft="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/recharge"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/txt_gray"
            android:layout_below="@id/ib03"
            android:layout_marginRight="55dp"
            android:layout_marginTop="5dp"
            android:layout_alignParentRight="true"
            android:text="@string/finish"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:background="@color/txt_white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/recharge"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textSize="@dimen/text_size_subhead_material"
            android:textColor="@color/txt_black"
            android:gravity="center"
            />
        <EditText
            android:id="@+id/et_verification_code"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/txt_white"
            android:hint="@string/please_input_recharge_money"
            android:padding="10dp"
            android:textColorHint="@color/txt_gray"
            android:textSize="@dimen/text_size_subhead_material"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/txt_white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@mipmap/ic_alipay"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/pay_by_alipay"
            android:textColorHint="@color/txt_gray"
            android:textSize="@dimen/text_size_subhead_material" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:checked="true"
            android:src="@mipmap/ic_arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/txt_white"
        android:layout_marginTop="2dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_wechat"
            android:drawablePadding="10dp"
            android:text="@string/pay_by_wechat"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:textColorHint="@color/txt_gray"
            android:textSize="@dimen/text_size_subhead_material"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_arrow_right"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></View>
    <TextView
        style="@style/SubmitButton"
        android:layout_gravity="bottom"
        android:text="@string/recharge"/>
</LinearLayout>
