<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/include_common_actionbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@mipmap/ic_bg_mine">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_header"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp"
            android:src="@mipmap/ic_default_head" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/civ_header"
            android:layout_marginTop="21dp"
            android:gravity="center"
            android:text="傻宝宝"
            android:textColor="@color/txt_white"
            android:textSize="@dimen/text_size_body_material" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:background="@color/translucent_black">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/account_balance"
                android:textColor="@color/txt_white"
                android:textSize="@dimen/text_size_body_material" />

            <TextView
                android:id="@+id/tv_money"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="￥100"
                android:textColor="@color/txt_white"
                android:textSize="@dimen/text_size_body_material" />

            <TextView
                android:id="@+id/tv_recharge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@drawable/circular_blue_fill"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:text="@string/recharge"
                android:textColor="@color/txt_white"
                android:textSize="@dimen/text_size_body_material" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_consume_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/txt_white"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="2dp">
        <TextView
            android:id="@+id/tv_consumption_records"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_wallet_01"
            android:drawablePadding="10dp"
            android:text="@string/records_of_consumption"
            android:padding="10dp"
            android:textColorHint="@color/txt_gray"
            android:textSize="@dimen/text_size_subhead_material"/>
       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@mipmap/ic_arrow_right"
           android:layout_gravity="center"
           android:scaleType="centerInside"
           android:layout_marginRight="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_my_campaign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/txt_white"
        android:layout_marginBottom="2dp">
        <TextView
            android:id="@+id/tv_mine_activity"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_team"
            android:drawablePadding="10dp"
            android:text="@string/mine_activity"
            android:padding="10dp"
            android:textColorHint="@color/txt_gray"
            android:textSize="@dimen/text_size_subhead_material"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_arrow_right"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:layout_marginRight="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_user_guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/txt_white"
        android:layout_marginBottom="2dp">
        <TextView
            android:id="@+id/tv_user_guide"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_teach"
            android:drawablePadding="10dp"
            android:text="@string/user_guide"
            android:padding="10dp"
            android:textColorHint="@color/txt_gray"
            android:textSize="@dimen/text_size_subhead_material"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_arrow_right"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:layout_marginRight="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_call_customer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/txt_white"
        android:layout_marginBottom="2dp">
        <TextView
            android:id="@+id/tv_contact_customer"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_help"
            android:drawablePadding="10dp"
            android:text="@string/contact_customer_service"
            android:padding="10dp"
            android:textColorHint="@color/txt_gray"
            android:textSize="@dimen/text_size_subhead_material"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_arrow_right"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:layout_marginRight="10dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <TextView
        android:id="@+id/tv_login_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:background="@color/txt_white"
        android:textSize="@dimen/text_size_subhead_material"
        android:text="退出当前账号"/>
</LinearLayout>
