<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/include_common_actionbar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/txt_white"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_alipay"
            android:drawablePadding="10dp"
            android:text="@string/pay_by_alipay"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:textColorHint="@color/txt_gray"
            android:textSize="@dimen/text_size_subhead_material"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_arrow_right"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/txt_white"
        android:layout_marginTop="2dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_wechat"
            android:drawablePadding="10dp"
            android:text="@string/pay_by_wechat"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:textColorHint="@color/txt_gray"
            android:textSize="@dimen/text_size_subhead_material"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_arrow_right"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/txt_white"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_wallet"
            android:drawablePadding="10dp"
            android:text="@string/pay_by_wallet"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:textColorHint="@color/txt_gray"
            android:textSize="@dimen/text_size_subhead_material"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_arrow_right"
            android:layout_gravity="center"
            android:checked="true"
            android:layout_marginRight="20dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></View>
    <TextView
        style="@style/SubmitButton"
        android:layout_gravity="bottom"
        android:text="确认支付:￥35.00"/>
</LinearLayout>
